--- a/style.css
+++ b/style.css
@@ -9,31 +9,33 @@ header {
   position: relative;
   border-top: none;
   margin-bottom: 15px; }
-  header .brand {
-    width: 100%; }
-    header .brand img {
-      position: absolute;
-      height: 75px;
-      top: 0;
-      margin: 0;
-      margin-left: -65px;
-      left: 50%;
-      z-index: 600;
-      border-radius: 2px;
-      box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.13); }
-      @media (min-width: 900px) {
-        header .brand img {
-          top: -18px;
-          margin: 0;
-          height: 90px;
-          left: 15px; } }
+  header .brand a {
+    display: block; }
+  header .brand img {
+    position: absolute;
+    height: 75px;
+    top: 0;
+    margin: 0;
+    left: 15px;
+    z-index: 600;
+    border-radius: 2px;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.13); }
+    @media (min-width: 900px) {
+      header .brand img {
+        top: -18px;
+        margin: 0;
+        height: 90px;
+        left: 15px; } }
 
 @media (max-width: 899px) {
   html.show-menu .nav-wrapper {
     padding-top: 40px; } }
 
-.hero.hero-1, .hero.hero-2 {
+.hero.hero-1 {
   margin-top: -15px; }
+  .hero.hero-1 .hero-text {
+    background: rgba(255, 255, 255, 0.85);
+    margin: 30px 15px; }
 
 .hero.hero-3 {
   margin-top: 0;
@@ -106,6 +108,7 @@ header {
       font-style: normal;
       font-stretch: normal;
       line-height: 1.5;
+      font-weight: 400;
       color: #794400; }
       @media (min-width: 900px) {
         .featured-content-wrapper .container-fluid .featured-body {
@@ -120,6 +123,7 @@ header {
       width: 100%;
       font-size: 32px;
       margin: 0;
+      text-transform: capitalize;
       padding: 30px 35px 15px;
       font-size: 30px;
       font-weight: 500;
